# AlphaAgentEvo

./: AGENT.md  PLAN.md  pyproject.toml  start_api.ps1  start_training.sh
backtest/: factor_executor.py
configs/: grpo_config.yaml
docs/: 01_overview.md  02_data.md  03_expression_language.md  04_operators.md  05_backtest.md  06_reward.md  07_training.md  08_evaluation.md  09_deployment.md  10_AGENT_GUIDE.md  README.md
tests/: test_factor_executor.py
training/: train.py
