[project]
name = "alphaagentevo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers>=4.45.0",
    "accelerate>=0.34.0",
    "peft>=0.13.0",
    "trl>=0.12.0",
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "h5py>=3.9.0",
    "pyarrow>=14.0.0",
    "pyparsing>=3.1.0",
    "scikit-learn>=1.3.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "scipy>=1.11.0",
    "bitsandbytes>=0.43.0",
    "joblib>=1.3.0",
    "tables>=3.11.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
